tests/errors/subroutine7.f90
subroutine sub (array)
    dimension array(3)
    double precision array
    integer , dimension(3) :: array
end subroutine